# lm32

./: lm.cross  meson.build
test/: Makefile  meson.build
test/unittests/: meson.build
